[package]
name = "miniprogram"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "miniprogram-api"
path = "src/bin/api.rs"

[dependencies]
config = { version = "~0.13.1", default-features = false, features = ["toml", "json", "json5"] }
chrono = { version = "~0.4.22", features = ["serde"] }
serde = { version = "~1.0.130", features = ["derive"] }
serde_json = { version = "~1.0.71" }

tracing = { version = "~0.1.37", default-features = false }
tracing-subscriber = { version = "~0.3.16", default-features = false, features = ["registry"] }

tokio = { version = "~1.33.0", features = ["full"] }
axum = { version = "~0.6.4" }
tower-http = { version = "~0.4.4", default-features = false, features = ["cors", "request-id"] }

sea-orm = { version = "~0.12.0", features = [ "macros", "runtime-tokio-rustls", "with-json", "with-chrono", "sqlx-sqlite", "sqlx-mysql" ] }

reqwest = { version = "~0.11.22" }

rs-snowflake = { version = "~0.6.0", default-features = false }
libreauth = { version = "~0.16.0", default-features = false }
